actualización de arcivos

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Abe | Inicio</title>
+    <meta name="keywords" content="diseño ux, diseño ui, diseño web, desarrollo web">
+    <meta name="description" content="Bienvenido a mi potfolio aqui podras encontrar información sobre mi experiencia y trabajos">
+    <title>Abe | Portafolio</title>
 </head>
 <body>
     <!--Nav bar start -->
