--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Abe | Inicio</title>
+    <meta name="keywords" content="diseño ux, diseño ui, diseño web, desarrollo web">
+    <meta name="description" content="Bienvenido a mi potfolio aqui podras encontrar información sobre mi experiencia y trabajos">
+    <title>Abe | Sobre mi</title>
 </head>
 <body>
     <!--Nav bar start -->
@@ -72,7 +74,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12 d-flex align-items-center">
-                            <a href="#" class="btn btn-danger px-3 btn-color me-5">Aquí mi CV</a>
+                            <a href="#" class="btn btn-danger px-3 btn-color me-5 btn-style">Aquí mi CV</a>
                             <div class="social-links">
                                 <a href="https://www.linkedin.com/in/omar-abelardo/" class="text-dark me-2"><i class="fa-brands fa-linkedin"></i></a>
                                 <a href="https://medium.com/@abe-pec" class="text-dark me-2"><i class="fa-brands fa-medium"></i></a>
@@ -84,25 +86,25 @@
                     <div class="skill-item mb-4">
                         <h3 class="fs-6" >UX</h3>
                         <div class="progress" style="height: 5px;">
-                            <div class="progress-bar btn-color" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill-item mb-4">
                         <h3 class="fs-6" >UI</h3>
                         <div class="progress" style="height: 5px;">
-                            <div class="progress-bar btn-color" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill-item mb-4">
                         <h3 class="fs-6" >Design systems</h3>
                         <div class="progress" style="height: 5px;">
-                            <div class="progress-bar btn-color" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill-item mb-4">
                         <h3 class="fs-6" >Web development</h3>
                         <div class="progress" style="height: 5px;">
-                            <div class="progress-bar btn-color" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bar" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
