--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Abe | Inicio</title>
+    <meta name="keywords" content="diseño ux, diseño ui, diseño web, desarrollo web">
+    <meta name="description" content="Bienvenido a mi potfolio aqui podras encontrar información sobre mi experiencia y trabajos">
+    <title>Abe | Contacto</title>
 </head>
 <body>
     <!--Nav bar start -->
@@ -83,7 +85,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <button type="submit" class="btn btn-danger btn-background px-3">Enviar mensaje</button>
+                                        <button type="submit" class="btn btn-danger btn-background px-3 btn-style">Enviar mensaje</button>
                                     </div>
                                 </div>
                             </div>
